fix: badge overflow fixed

--- a/draft-packages/zen-navigation-bar/KaizenDraft/ZenNavigationBar/components/Badge.module.scss
+++ b/draft-packages/zen-navigation-bar/KaizenDraft/ZenNavigationBar/components/Badge.module.scss
@@ -11,6 +11,7 @@
   text-decoration: none;
   text-transform: uppercase;
   width: $ca-navigation-bar__height;
+  max-height: 100%;
   flex: 0 0 $ca-navigation-bar__height;
 
   // auto 1:1 (square) aspect ratio
